--- a/api/templates/spotify.html.j2
+++ b/api/templates/spotify.html.j2
@@ -7,7 +7,7 @@
                     display: flex;
                 }
 
-                .currentStatus {
+                /*.currentStatus {
                     float: left;
                     color: #f7f7f7;
                     font-size: 24px;
@@ -26,7 +26,7 @@
                     -webkit-box-decoration-break: clone;
                     box-decoration-break: clone;
                     animation: gradient 17s ease infinite;
-                }
+                }*/
                 
                 .container {
                     border-radius: 5px;
